--- a/src/index.css
+++ b/src/index.css
@@ -251,6 +251,91 @@ button:hover{
     margin-bottom: -3px;
     border-radius: 2px 2px 0px 0px / 2px 2px 0px 0px ;
 }
+/* main page */
+.mainpage_banner {
+    background-color : #262335;
+    width: 100%;
+    height: 500px;
+    text-align: center;
+    margin-bottom: 50px;
+    border-bottom: 1px solid #241b2f;
+}
+.mainpage_logo {
+    padding-top: 50px;
+    width: 400px;
+    margin: auto;
+}
+.mainpage_langauge{
+    padding-bottom: 13px;
+}
+.mainpage_buttons{
+    width: 950px;
+    text-align: left;
+    margin: auto;
+    margin-top: -5px;
+}
+.mainpage_button{
+    margin-left: 20px;
+    margin-right: 10px;
+    text-align: center;
+    background-color: rgba(0,0,0,0);
+    border: none;
+    color: rgb(209, 209, 209);
+    font-size: 13pt;
+    font-weight: 600;
+    float: right;
+}
+.mainpage_search{
+    width: 600px;
+    height: 50px;
+    background-color: #262335;
+    border-radius: 50px;
+    margin: auto;
+    margin-bottom: 50px;
+    border-bottom: 1px solid #241b2f;
+    position: relative;
+}
+.mainpage_search_select{
+    width: 60px;
+    height: 40px;
+    background-color: rgb(209, 209, 209);
+    border-radius: 50px;
+    font-size: 14pt;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+}
+.mainpage_search_selectCircle{
+    width: 36px;
+    height: 36px;
+    border-radius: 50px;
+    background-color: white;
+    position: absolute;
+    border: none;
+    top: 2px;
+    left: 2px;
+}
+.mainpage_search_selectimg{
+    width: 56px;
+    height: 36px;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    border-radius: 50px;
+}
+.mainpage_search_box{
+    background-color: rgba(0,0,0,0);
+    border:none;
+    font-size: 16pt;
+    margin-left: 80px;
+    margin-top: 13px;
+}
+.mainpage_ad{
+    width: 970px;
+    height: 250px;
+    background-color: white;
+    margin: auto
+}
 /* 1 page */
 .banner {
     background-color: rgb(38, 35, 53);
