루트 드랍박스 디자인

--- a/src/index.css
+++ b/src/index.css
@@ -1782,6 +1782,14 @@ button:hover{
     margin-top: 10px;
     text-align: center;
 }
+.Route_L_StartItem{
+    position: relative;
+    width: 110px;
+    height: 81px;
+}
+.Route_L_StartItem :hover{
+    cursor: pointer;
+}
 .Route_L_StartItem1{
     width: 40px;
     margin-left: 28px;
@@ -1791,8 +1799,11 @@ button:hover{
     margin-top: 10px;
 }
 .Route_L_StartItem2{
+    position: absolute;
+    top: 53px;
+    left: 5px;
     display:inline-block;
-    width: 80px;
+    width: 100px;
 }
 .Route_L_PickItem_box{
     position: relative;
@@ -1805,9 +1816,13 @@ button:hover{
     border-radius: 3px;
     background-color:  #241b2f;
 }
+.Route_L_PickItem_box :hover{
+    cursor: pointer;
+}
 .Route_L_PickItem{
+    position: absolute;
     width: 200px;
-    height: 50px;
+    height: 90px;
     margin-top: 5px;
 }
 .Route_L_PickItem1{
@@ -1820,15 +1835,100 @@ button:hover{
 }
 .Route_L_PickItem2{
     position: absolute;
-    top:5px;
-    left:65px;
+    top:8px;
+    left:66px;
     margin-top: 3px;
 }
 .Route_L_PickItem3{
+    position: absolute;
     display: inline-block;
     width: 200px;
-    font-size: 15pt;
+    font-size: 14pt;
+    top: 57px;
+    left: 0px;
+}
+.Route_L_StartItem_dropbox_all{
+    position: absolute;
+    max-height: 400px;
+    overflow: scroll;
+    border-radius: 5px;
+    background-color: #171520;
+    z-index: 1;
+}
+.Route_L_StartItem_dropbox{
+    width: 110px;
+    height: 70px;
+    border-bottom: 1px solid #3b4147;
+    position: relative;
+    border-radius: 5px;
+}
+.Route_L_StartItem_dropbox :hover{
+    cursor:pointer;
+}
+.Route_L_StartItem_dropbox1{
+    position: absolute;
+    top: 5px;
+    left: 34px;
+    width: 40px;
+    border-radius: 5px;
+    border: 1px solid #3b4147;
+}
+.Route_L_StartItem_dropbox2{
+    position: absolute;
+    top: 50px;
+    left: 5px;
+    font-size: 10pt;
+    text-align: center;
+    display: inline-block;
+    width: 100px;
+}
+.Route_L_PickItem_dropbox_all{
+    position: absolute;
+    max-height: 400px;
+    overflow: scroll;
+    border-radius: 5px;
+    margin-top: 95px;
+    background-color: #171520;
+}
+.Route_L_PickItem_dropbox :hover{
+    cursor:pointer;
+}
+.Route_L_PickItem_dropbox{
+    position: relative;
+    width: 200px;
+    height: 65px;
+    z-index: 1;
     margin-top: 0px;
+    border-bottom: 1px solid #3b4147;
+    border-radius: 5px;
+}
+.Route_L_PickItem_dropbox0{
+    position: absolute;
+    width: 200px;
+    height: 55px;
+    margin-top: 5px;
+}
+.Route_L_PickItem_dropbox1{
+    position: absolute;
+    top: 0px;
+    left: 68px;
+    border: 1px solid #3b4147;
+    border-radius: 3px;
+}
+.Route_L_PickItem_dropbox2{
+    position: absolute;
+    top: 1px;
+    left: 69px;
+    border-radius: 3px;
+}
+.Route_L_PickItem_dropbox3{
+    position: absolute;
+    font-size: 10pt;
+    text-align: center;
+    display: inline-block;
+    width: 200px;
+    left: 0px;
+    top: 45px;
 }
 .Route_L_Route{
     width: 750px;
@@ -1838,6 +1938,19 @@ button:hover{
 }
 .Route_L_Route_FilterX{
     clear: both;
+}
+.Route_L_Route_cal{
+    display: inline-block;
+    width: 100px;
+    height: 25px;
+    margin-left: 6px;
+    margin-top: 0px;
+    margin-bottom: 15px;
+    float: left;
+    text-align: center;
+    background-color:  #241b2f;
+    border-bottom: solid 1px #171520;
+    border-radius: 5px;
 }
 .Route_L_Route_Filter{
     display: inline-block;
@@ -1862,7 +1975,17 @@ button:hover{
     border-bottom: solid 1px #3b4147;
     border-radius: 5px;
 }
-
+.Route_L_Route_Filter_dropbox_all{
+    width: 100px;
+    max-height: 300px;
+    background-color:  #171520;
+    margin-top: 5px;
+    border-radius: 5px;
+}
+.Route_L_Route_Filter_dropbox{
+    border-radius: 5px;
+    border-bottom: solid 1px #3b4147;
+}
 .Route_L_RouteX_all{
     margin-top: 30px;
     width: 750px;
@@ -1870,7 +1993,7 @@ button:hover{
     background-color: #241b2f;
     border-radius: 5px;
     border-bottom: 1px solid #171520;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 .Route_L_RouteX{
     padding-top: 5px;
@@ -2416,7 +2539,7 @@ button:hover{
 }
 .Route_R_Mapitem_allbox{
     width: 372px;
-    height: 280px;
+    height: 236px;
     background-color:  #241b2f;
     border-bottom: 1px solid #171520;
     border-radius: 5px;
