--- a/src/index.css
+++ b/src/index.css
@@ -251,7 +251,7 @@ button:hover{
     margin-bottom: -3px;
     border-radius: 2px 2px 0px 0px / 2px 2px 0px 0px ;
 }
-/* main page */
+/* 0 page */
 .mainpage_banner {
     background-color : #262335;
     width: 100%;
@@ -268,11 +268,15 @@ button:hover{
 .mainpage_langauge{
     padding-bottom: 13px;
 }
-.mainpage_buttons{
+.mainpage_banner_option{
     width: 950px;
     text-align: left;
     margin: auto;
     margin-top: -5px;
+}
+.mainpage_buttons :hover{
+    border-bottom: 1px solid rgb(244,216,35);
+    padding-bottom: 12px;
 }
 .mainpage_button{
     margin-left: 20px;
@@ -1889,6 +1893,7 @@ button:hover{
     border-radius: 5px;
     margin-top: 95px;
     background-color: #171520;
+    z-index: 1;
 }
 .Route_L_PickItem_dropbox :hover{
     cursor:pointer;
@@ -1949,8 +1954,11 @@ button:hover{
     float: left;
     text-align: center;
     background-color:  #241b2f;
-    border-bottom: solid 1px #171520;
+    border: none;
+    border-bottom: solid 1px rgb(244,216,35);
     border-radius: 5px;
+    color: rgb(209, 209, 209);
+    font-size: 12pt
 }
 .Route_L_Route_Filter{
     display: inline-block;
@@ -2026,10 +2034,12 @@ button:hover{
 .Route_L_Route_item1{
     width: 48px;
     position: absolute;
+    border-radius: 2px;
 }
 .Route_L_Route_item2{
     width: 48px;
     position: absolute;
+    border-radius: 2px;
 }
 .Route_R{
     width: 372px;
@@ -2563,6 +2573,398 @@ button:hover{
     position: absolute;
     border-radius: 3px;
 }
-
-
-
+/* 4 page */
+.record_top{
+    padding-top: 40px;
+    margin-bottom: 40px;
+    width: 1152px;
+    height: 186px;
+    margin: auto;
+}
+.record_top_icon{
+    float: left;
+}
+.record_top_iconimg{
+    width: 130px;
+    border-radius: 100%;
+    border: solid 3px rgb(244,216,35);
+}
+.record_top_right{
+    display: inline-block;
+    width: 400px;
+    margin-left: 30px;
+}
+.record_top_name{
+    font-size: 35pt;
+}
+.record_top_renew{
+    display: inline-block;
+    text-align: center;
+    margin-top: 15px;
+    margin-left: 5px;
+    background-color: #007fd3;
+    color: rgb(209, 209, 209);
+    border-radius: 3px;
+    width: 100px;
+    height: 40px;
+    font-size: 13pt;
+    border:none;
+}
+.record_top_updated{
+    margin-left: 15px;
+    font-size: 10pt;
+    color: rgb(209, 209, 209);
+}
+.record_top_medal{
+    float: right;
+    width: 100px;
+    margin-right: 15px;   
+}
+.record_main{
+    width: 1152px;
+    margin: auto;
+}
+.record_left{
+    width: 350px;
+    float: left;
+    margin-right: 12px;
+}
+.record_rank{
+    width: 350px;
+    background-color: #262335;
+    border-radius: 3px;
+}
+.record_rank0{
+    display: inline-block;
+    width: 350px;
+    text-align: center;
+    background-color: #241b2f;
+    font-size: 23pt;
+    padding-top: 3px;
+    border-radius: 3px 3px 0px 0px;
+    height: 38px;
+    font-family: 'Big Shoulders Stencil Display';
+    border-bottom: 1px solid rgb(23, 21, 32);
+}
+.record_rank_box{
+    width: 350px;
+    height: 115px;
+    border-bottom: 1px solid #3b4147;
+    border-radius: 3px;
+    overflow: hidden;
+}
+.record_rank_icon{
+    width: 100px;
+    float: left;
+    margin-top: 0px;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+.record_rank_span1{
+    font-size: 18pt;
+    margin-top: 5px;
+}
+.record_rank_span2{
+    font-size: 9pt;
+    margin-top: 2px;
+}
+.record_rank_span3{
+    font-size: 9pt;
+    margin-top: 1px;
+}
+.record_rank_span4{
+    font-size: 9pt;
+    margin-top: 1px;
+}
+.record_rank_graph{
+    background-color: rgb(255, 166, 0);
+    height: 3px;
+    width: 55px;
+    margin-top: 17px;
+}
+.record_most{
+    background-color: #262335;
+    width: 350px;
+    margin-top: 15px;
+    border-radius: 3px;
+}
+.record_most0{
+    display: inline-block;
+    width: 350px;
+    text-align: center;
+    background-color: #241b2f;
+    font-size: 18pt;
+    padding-top: 3px;
+    border-radius: 3px 3px 0px 0px;
+    height: 30px;
+    font-family: 'Big Shoulders Stencil Display';
+    border-bottom: 1px solid rgb(23, 21, 32);
+}
+.record_most_tabs .actived{
+    border-bottom: 1px solid rgb(244,216,35);
+    color: white;
+}
+.record_most_tabs :hover{
+    cursor: pointer;
+}
+.record_most_tabs{
+    clear: both;
+    text-align: center;
+    color:gray;
+}
+.record_most_tab1{
+    float: left;
+    width: 175px;
+    height: 25px;
+    border-bottom: 1px solid #3b4147;
+}
+.record_most_tab2{
+    float: left;
+    width: 87.5px;
+    height: 25px;
+    border-bottom: 1px solid #3b4147;
+}
+.record_most_box{
+    clear: both;
+    height: 59px;
+    border-bottom: 1px solid #3b4147;
+    border-radius: 3px;
+}
+.record_most_img{
+    margin-top: 7px;
+    margin-left: 23px;
+    width: 43px;
+    border: 1px solid #3b4147;
+    border-radius: 100%;
+    float: left;
+}
+.record_most_span{
+    float: left;
+}
+.record_most_span1{
+    display: inline-block;
+    width: 140px;
+    font-size: 12pt;
+    margin-top: 8px;
+    float: left;
+    margin-left: 15px;
+}
+.record_most_span2{
+    display: inline-block;
+    width: 100px;
+    font-size: 10pt;
+    float: right;
+    margin-top: 11px;
+    text-align: right;
+}
+.record_most_span3{
+    display: inline-block;
+    width: 140px;
+    font-size: 9pt;
+    clear: both;
+    float: left;
+    margin-left: 15px;
+    margin-top: -3px;
+}
+.record_most_span4{
+    display: inline-block;
+    width: 100px;
+    font-size: 9pt;
+    float: right;
+    text-align: right;
+    margin-top: -3px;
+}
+.record_most_button{
+    width: 350px;
+    font-size: 13pt;
+    height: 35px;
+    border-radius: 3px;
+    background-color: rgba(0,0,0,0);
+    border: none;
+    border-bottom: 1px solid #3b4147;
+    color: rgb(209, 209, 209);
+}
+.record_with{
+    margin-top: 15px;
+    border-radius: 3px;
+    width: 350px;
+    height: 100px;
+    background-color: #262335;
+}
+.record_with0{
+    display: inline-block;
+    width: 350px;
+    text-align: center;
+    background-color: #241b2f;
+    font-size: 18pt;
+    padding-top: 3px;
+    border-radius: 3px 3px 0px 0px;
+    height: 30px;
+    font-family: 'Big Shoulders Stencil Display';
+    border-bottom: 1px solid rgb(23, 21, 32);
+}
+.record_rigth{
+    float: left;
+}
+.record_match{
+    width: 790px;
+    background-color: #262335;
+    border-radius: 3px;
+}
+.record_match0{
+    width: 790px;
+    text-align: center;
+    background-color: #241b2f;
+    border-radius: 3px 3px 0px 0px;
+    height: 41px;
+    font-family: 'Big Shoulders Stencil Display';
+    border-bottom: 1px solid rgb(23, 21, 32);
+}
+.record_match0_span{
+    display: inline-block;
+    width: 300px;
+    padding-top: 2px;
+    font-size: 23pt;
+    margin-left: 150px;
+}
+.record_match0_tabs{
+    float: right;
+}
+.record_match0_tabs .actived{
+    color: rgb(209, 209, 209);
+    border-bottom: 1px solid rgb(244,216,35);
+}
+.record_match0_tabs :hover{
+    cursor: pointer;
+}
+.record_match0_tab{
+    width: 75px;
+    float: left;
+    font-size: 12pt;
+    padding-top: 21px;
+    padding-bottom: 1px;
+    color: gray;
+}
+.record_match_tab2{
+    width: 197.5px;
+    float: left;
+    font-size: 12pt;
+    padding-bottom: 1px;
+    color: gray;
+    border-bottom: 1px solid #3b4147;
+    margin-bottom: 5px;
+}
+.record_trend{
+    width: 790px;
+    height: 70px;
+    border-bottom: 1px solid #3b4147;
+    border-radius: 3px;
+    margin-top: 35px;
+}
+.record_trend_win{
+    margin-left: 30px;
+    float: left;
+}
+.record_trend_winspan{
+    font-size: 30pt;
+    margin-left: 5px;
+    vertical-align: middle;
+    float: left;
+    margin-top: 5px;
+    color: rgb(244,216,35);
+    font-family: 'Big Shoulders Stencil Display';
+    margin-left: 50px;
+    margin-right: 50px;
+}
+.record_trend_winrate{
+    float: left;
+}
+.record_trend_winrate_graph{
+    width: 60px;
+    height: 60px;
+    background: conic-gradient(rgb(94, 194, 48) 0% 11%, rgb(49, 106, 190) 11% 40%, rgb(206, 51, 30) 40% 100%);
+    border-radius: 100%;
+    position: relative;
+    margin-left: 80px;
+    float: left;
+    margin-top: 1px;
+}
+.record_trend_winrate_graph2{
+    background-color: #262335;
+    width: 40px;
+    height: 40px;
+    top: 10px;
+    left: 10px;
+    border-radius: 100%;
+    position: absolute;
+}
+.record_trend_avg{
+    float: left;
+    width: 40px;
+    font-size: 9pt;
+    position: absolute;
+    text-align: center;
+    top: 20px;
+    left: 10px;
+}
+.record_trend_winrate_span{
+    display: inline-block;
+    width: 50px;
+    font-size: 9pt;
+    margin-top: 3px;
+    margin-left: 10px;
+    float: left;
+}
+.record_trend_winrate_span1{
+    color: rgb(94, 194, 48);
+}
+.record_trend_winrate_span2{
+    color: rgb(49, 106, 190);
+}
+.record_trend_winrate_span3{
+    color: rgb(206, 51, 30);
+}
+.record_trend_kda{
+    display: inline-block;
+    width: 100px;
+    float: left;
+    margin-top: 7px;
+    margin-left: 50px;
+}
+.record_trend_kda1{
+    text-align: center;
+}
+.record_trend_kda2{
+    font-size: 10pt;
+    text-align: center;
+}
+.record_trend_most_box{ 
+    width: 790px;
+    height: 50px;
+    border-bottom: 1px solid #3b4147;
+    border-radius: 3px;
+    margin-top: 5px;
+}
+.record_trend_most{
+    float: left;
+    margin-left: 36px;
+    margin-top: 1px;
+}
+.record_trend_most_img{
+    width: 40px;
+    border-radius: 100%;
+    border: 1px solid #3b4147;
+    float: left;
+}
+.record_trend_most_span{
+    display: inline-block;
+    width: 180px;
+    font-size: 11pt;
+    text-align: left;
+    margin-left: 5px;
+}
+.record_trend_most_span1{
+    font-size: 10pt;
+}
+.record_trend_most_span2{
+}
